@@ -180,6 +180,7 @@ changes to languages because of Bugzilla reports.
 * Removed HTMLForm::addJS(). (deprecated since 1.18)
 * Removed LogEventsList::showHeader(). (deprecated since 1.19)
 * Removed ImageGalleryBase::useSkin(). (deprecated since 1.18)
+* Removed DatabaseMysqlBase::getLagFromProcesslist(). (deprecated since 1.19)
 
 ==== Renamed classes ====
 * CLDRPluralRuleConverter_Expression to CLDRPluralRuleConverterExpression
